[gd_scene load_steps=6 format=2]

[ext_resource path="res://fases/world2 .gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player/player_top_down.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 231, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39, 377.756 )

[node name="world2 " type="Node"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 3, 168 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 10.5, -604.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D2/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -192.75, -216.75 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D3/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -412.125, -216.75 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D6/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 385.5, -225 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D4/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 127.5, -38.25 )
rotation = 1.56051
scale = Vector2( 0.041697, 1.87954 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D5/CollisionShape2D"]
modulate = Color( 0.0666667, 0.0117647, 0.0117647, 1 )
position = Vector2( -14.0422, -5.96046e-008 )
scale = Vector2( 7.60511, 0.34375 )
texture = ExtResource( 2 )

[node name="player_top_down" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 43.875, -43.875 )
scale = Vector2( 0.440059, 0.480055 )

[node name="Camera2D" type="Camera2D" parent="player_top_down"]
current = true

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -148.5, -246.375 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -175.0
margin_top = -181.667
margin_right = 43.0
margin_bottom = -114.667
custom_colors/font_color = Color( 0.756863, 0.054902, 0.054902, 1 )
text = "mude a perspectiva que vc olha"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
